Convert weather DTOs to records and fix snake_case temperature mapping
# Conflicts:
#	backend/src/main/java/com/codecool/travelplanner/dto/weather/WeatherApiResponse.java
#	backend/src/test/java/com/codecool/travelplanner/service/WeatherDataServiceTest.java